@@ -261,6 +261,7 @@ wesnoth_sources = Split("""
     gui/auxiliary/window_builder/button.cpp
     gui/auxiliary/window_builder/control.cpp
     gui/auxiliary/window_builder/helper.cpp
+    gui/auxiliary/window_builder/horizontal_listbox.cpp
     gui/auxiliary/window_builder/horizontal_scrollbar.cpp
     gui/auxiliary/window_builder/image.cpp
     gui/auxiliary/window_builder/label.cpp
